--- a/client/src/css/about.module.css
+++ b/client/src/css/about.module.css
@@ -26,12 +26,16 @@
   max-width: 1400px;
   border-radius: 10px;
   text-align: center;
-  margin-top: 100px;
+  margin-top: 140px;
 }
 
 .aboutImg {
   height: 200px;
   width: 200px;
+}
+
+.aboutImgDesc {
+  margin-top: 20px;
 }
 
 @media (max-width: 767px) {
@@ -57,6 +61,6 @@
     max-width: 1400px;
     border-radius: 10px;
     text-align: center;
-    margin-top: 680px;
+    margin-top: 900px;
   }
 }
