Adjusted gray colour for unchecked buttons on fitness

--- a/client/src/css/fitness.module.css
+++ b/client/src/css/fitness.module.css
@@ -169,7 +169,12 @@ input[type="checkbox"]:checked + .muscleGroupButton {
 }
 
 .doneExerciseButton {
-  background-color: hsl(120, 3%, 40%);
+  background-color: #626262;
+  color: black;
+}
+
+.doneExerciseButton:hover {
+  background-color:#016501 ;
   color: black;
   border: #008000;
 }
