Modified Calendar.jsx's media query by adding overflow-wrap and word-break

--- a/client/src/css/calendar.module.css
+++ b/client/src/css/calendar.module.css
@@ -54,4 +54,14 @@
     border-radius: 10px;
     text-align: center;
   }
+
+  .workoutEventTitle,
+  .workoutEvent {
+    color: white;
+    font-size: 1rem;
+    font-weight: bold;
+    margin: auto;
+    overflow-wrap: break-word;
+    word-break: break-word;
+  }
 }
